feat[crud]: crud realized with postgres storage
